# QecVAE_for_Phase_Recognition

./: requirements.txt  setup.cfg
scripts/: main.py  mainCluster.py  mainIsing.py  mainSupervised.py  parameters.py  testing.py  testlab_bitflip.py  testlab_depolarizing.py
src/ErrorCode/: ErrorCode.py  error_code.py
src/NN/: Dataset.py  Predictions.py  dataset.py  net.py  predictions.py  test.py  train.py
src/NN/utils/: Functions.py  Plotter.py  __init__.py  functions.py  plotter.py
src/error_code/: decoding.py  error_code.py
src/ising/: ising_lattice.py
src/nn/: __init__.py  test.py  train.py
src/nn/data/: __init__.py  bitflip.py  depolarizing.py  ising.py  phenomenological.py  predictions.py  qecdata.py  results_wrapper.py
src/nn/net/: __init__.py  cnn.py  decoder.py  encoder.py  net.py  transformer.py  vae.py  vision_transformer.py
src/nn/utils/: functions.py  loss.py  max_unpool.py  optimizer.py  plotter.py
tests/: test_dataset.py  test_error_code.py  test_transformer.py
