[metadata]
name = src
version = 1.0
author = <Dominik Seip>
author_email = dominik.seip@rwth-aachen.de
description = Necessary framework to provide necessary tools for computing the threshold using a VAE
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
license_files = LICENSE.txt

[options]
packages = find:

[options.packages.find]
include = NN